<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.4.1</version>
        <relativePath />
    </parent>
    <groupId>de.cuioss.portal</groupId>
    <artifactId>cui-portal-core</artifactId>
    <version>1.3-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>cui portal core</name>
    <description>The core modules of the cui-portal incorporating
        portal-configuration and portal authentication.
    </description>
    <url>https://github.com/cuioss/cui-portal-core/</url>
    <modules>
        <module>bom</module>
        <module>modules</module>
    </modules>
    <scm>
        <url>https://github.com/cuioss/cui-portal-core/</url>
        <connection>scm:git:https://github.com/cuioss/cui-portal-core.git</connection>
        <developerConnection>scm:git:https://github.com/cuioss/cui-portal-core/</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-portal-core/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>
</project>
